--- a/src/app/posts-output/posts-output.component.css
+++ b/src/app/posts-output/posts-output.component.css
@@ -1,4 +1,5 @@
-h1, h3 {
+h1,
+h3 {
     /* font-family: 'Libre Franklin', sans-serif; */
     font-family: 'Russo One', sans-serif;
     text-align: center;
@@ -27,6 +28,7 @@ h1, h3 {
     /* margin: 5px 5px; */
     margin: 5px;
     margin-bottom: 10px;
+    overflow: hidden;
 }
 
 .grid-item:hover {
