Add further styling.

--- a/src/app/posts-output/posts-output.component.html
+++ b/src/app/posts-output/posts-output.component.html
@@ -1,12 +1,15 @@
-<h1>HUNDY</h1>
-<h3 *ngIf="selectedSquare && squareClicked">LAST POST ID: {{ selectedSquare }}</h3>
-<div class="grid-container">
-    <app-post-square 
-        *ngFor="let post of allPosts; let i = index"
-        (click)="setSelectedSquare(i)"
-        [post]="post"
-        [selectedSquare]="selectedSquare"
-        class="grid-item">
-    </app-post-square>
+<div class="main">
+    <h1>HUNDY</h1>
+    <h4>100 Squares. Zero Meaning.</h4>
+    <h3 *ngIf="selectedSquare && squareClicked">LAST POST ID: {{ selectedSquare }}</h3>
+    <div class="grid-container">
+        <app-post-square 
+            *ngFor="let post of allPosts; let i = index"
+            (click)="setSelectedSquare(i)"
+            [post]="post"
+            [selectedSquare]="selectedSquare"
+            class="grid-item">
+        </app-post-square>
+    </div>
 </div>
 
