--- a/src/app/posts-output/posts-output.component.css
+++ b/src/app/posts-output/posts-output.component.css
@@ -13,7 +13,6 @@ h1 {
     font-style: italic;
     margin-top: 50px;
     margin-bottom: 0;
-    /* border: 2px solid black; */
 }
 
 h4 {
@@ -21,7 +20,6 @@ h4 {
     color: #FE0000;
     text-align: center;
     font-style: italic;
-    /* border: 2px solid black; */
     margin-top: 0;
 }
 
@@ -43,8 +41,7 @@ h3 {
     background-color: #A8A196;
     border: 1px solid #7D7463;
     color: #fff;
-    height: 120px;
-    /* border: 1px solid; */
+    height: 110px;
     padding: 10px;
     box-shadow: 5px 10px 8px #888888;
     font-size: 13px;
@@ -53,13 +50,12 @@ h3 {
     border-radius: 10%;
     margin: 5px;
     margin-bottom: 10px;
-    overflow: hidden;
 }
 
 .grid-item:hover {
     /* filter: none;
     -webkit-filter: grayscale(0); */
-    margin: 4px;
+    /* margin: 4px; */
     cursor: pointer;
     transition: 0.2s;
 }
